--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
-  display: flex;
-  justify-content: center;
-  margin: 0;
-  padding: 0;
-  font-family: sans-serif;
+	display: flex;
+	justify-content: center;
+	font-family: 'Roboto', sans-serif;
+	margin: 0;
+	padding: 0;
+	background-image: linear-gradient(-1deg, #000000 0%, #496294 100%);
 }
