--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,16 @@
+* {
+	box-sizing: border-box;
+}
+
+html, body {
+	font-size: 62.5%;
+}
+
 body {
 	display: flex;
 	justify-content: center;
 	font-family: 'Roboto', sans-serif;
+	font-size: 2.4rem;
 	margin: 0;
 	padding: 0;
 	background-image: linear-gradient(-1deg, #000000 0%, #496294 100%);
